# Bad-Vulpera

./: Bad_Vulpera.toc  discord-workflow.py  main.lua
Lovense/bad-vulpera-client/: Cargo.toml
Lovense/bad-vulpera-server/: Cargo.toml
Lovense/bad-vulpera-server/src/: main.rs
Python/: lovense_client.py
